# reservation

./: .env  Cargo.toml  README.md  deny.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs
migrations/: 20231205144852_init.up.sql  20231205151421_reservation.up.sql  20231205151834_reservation_trigger.up.sql  20231205152132_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
