[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["migrate","runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.50"

[dev-dependencies]
prost-types = "0.12.3"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
